Chart working, more logic added.

--- a/frontend/src/theme/dark/_smui-theme.scss
+++ b/frontend/src/theme/dark/_smui-theme.scss
@@ -4,16 +4,16 @@
 
 // Svelte Colors! (Dark Theme)
 @use "@material/theme/index" as theme with (
-  $primary: #ff3e00,
-  $secondary: color.scale(#676778, $whiteness: -10%),
+  $primary: #7289da,
+  $secondary: color.scale(#99aab5, $whiteness: -10%),
   $surface: color.adjust(color-palette.$grey-900, $blue: +4),
-  $background: #000,
+  $background: #2c2f33,
   $error: color-palette.$red-700
 );
 
 html,
 body {
-  background-color: #000;
+  background-color: #2c2f33;
   color: theme.$on-surface;
   font-family:
     "Nunito",
